sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:25: error: ';' expected but 'else' found.
    } else {
      ^